			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: avoid errors in open while getting a stacktrace.  Mike
    Elston. 

  * FIXED: 1 is sin(pi/2) incorrectly succeeded in optimised mode.

  * MODIFIED: Message term of make/0 after completion has changed from
    make(done) to make(done(Files)).  Should not affect user-code.

  * ADDED: Library option, option/2.

  * DOC: Fixed all libraries to have their comments compatible with the
    emerging documentation package.

  * FIXED: stead-fastness of library predicate option/3.

  * PORT: Bug#192: Better implementation of per-thread CPUtime, depending
    on Linux library and kernel versions.  Keri Harris.

  * FIXED: Bug#191: with_output_to and format: lacking initialisation.
    Holger Kanwischer.

  * FIXED: Interaction problem between comments and subterm-positions
    options in read_term/3.  Lukas Degener.

  * ADDED: library prolog_source.pl.  Start to generalise opening, closing
    and dealing with operators to handle Prolog source documents outside the
    compiler.

  * FIXED: read_term/2,3 comments(-Comments) option loosing first
    character after /*.

  * FIXED: Bug#189: Thread id in Linux/PPC (and possibly others).
    Keri Harris.

  * FIXED: Bug#188: missing module_transparent for sformat/2,3.  
    Holger Kanwischer.

  * FIXED: Bug#185: %+ initialization if yday and yday.  Keri Harris.

  * FIXED: Bug#184: date/time test-suite for ~ -> %.  Keri Harris.

==============================
VERSION 5.6.17 (July 27, 2006)
==============================

  * MODIFIED: predicate_property(Pred, number_of_clauses(N)) returns 0
    for dynamic predicates with 0 clauses.

  * FIXED: Added Unicode support to DDE interface.
